--- a/script/style.css
+++ b/script/style.css
@@ -182,7 +182,7 @@
 
 .info {
   padding: 6px 8px;
-  font: 14px/16px Arial, Helvetica, sans-serif;
+  font: 16px/18px Arial, Helvetica, sans-serif;
   background: white;
   background: rgba(255,255,255,0.8);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
@@ -197,9 +197,23 @@
   color: #555;
 }
 .legend i {
-  width: 18px;
-  height: 18px;
   float: left;
   margin-right: 8px;
   opacity: 0.7;
+}
+
+
+.legendbox{
+  width: 20px;
+  height: 20px;
+  border: 1px solid rgba(0, 0, 0, .2);
+}
+
+.tablehead{
+  height:26px;
+}
+
+.legendcontent{
+width:110px;
+
 }
