--- a/script/style.css
+++ b/script/style.css
@@ -211,3 +211,22 @@ width:110px;
 }
 
 
+.aq-color-1{
+	color:#00E400;
+	}
+
+.aq-color-2{
+	color:#FFFF00;
+	}
+.aq-color-3{
+	color:#FF7E00;
+	}
+.aq-color-4{
+	color:#FF0000;
+	}
+.aq-color-5{
+	color:#8F3F97;
+	}
+.aq-color-6{
+	color:#7E0023;
+	}
