refine custom layers

--- a/script/style.css
+++ b/script/style.css
@@ -8,7 +8,19 @@
  *
  * ******************************************************* */
 
-//------------------------------------methods------------------------------------
+/*------------------------------------methods------------------------------------*/
+
+#drop_zone {
+  border: 2px dashed #bbb;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  padding: 25px;
+  text-align: center;
+  font: 20pt bold 'Vollkorn';
+  color: #bbb;
+}
+
 #container {
   height: 100%;
   width: 100%
